tests/sem/pass/assign_deref.c
void main() {
    int i;
    int* pi;
    i=123;
    *pi=i;
}