tests/sem/error/deref.c
void main() {
	*'c';
	*114514;
}
